[package]
name = "bouncy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive", "env"] }
pnet = "0.35.0"
socket2 = { version = "0.6.0", features = ["all"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
